<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_ar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
             >

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/em_icon_account" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="40dp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/user_name"
                android:paddingLeft="10dp"
                android:drawableBottom="@drawable/edittext_border"
                android:singleLine="true"
                android:textColor="@color/colorWrite"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/rl_username"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="10dp"
           >

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/em_icon_pwd" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="40dp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableBottom="@drawable/edittext_border"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWrite"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:layout_below="@id/password"
                android:background="@color/colorBlack"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/card_login_btn_bg"
                android:gravity="center"
                android:onClick="register"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/register"
                android:textColor="@color/loginYellow"
                android:textSize="18sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/card_login_btn_bg"
                android:gravity="center"
                android:onClick="login"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/login"
                android:textColor="@color/loginYellow"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>