<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res-auto">

 <!--   <com.hyphenate.easeui.widget.EaseTitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarTitle="@string/set"
        />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:background="@drawable/avator_bg">

                <com.cj.arcard.widget.RoundImg.RoundedImageView
                    android:id="@+id/my_head_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/em_default_avatar"
                    android:layout_marginTop="50dp"
                    android:layout_centerHorizontal="true"
                    app:riv_oval="true"/>

                <TextView
                    android:id="@+id/my_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/my_head_avatar"
                    android:textColor="@color/colorWrite"
                    android:layout_centerHorizontal="true"
                    />

                <ImageView
                    android:id="@+id/my_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/my_setting"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_switch_notification"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/em_btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/newnotify"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <com.hyphenate.easeui.widget.EaseSwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch_notification"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="#E6E6E6" />

                <RelativeLayout
                    android:id="@+id/rl_switch_sound"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/em_btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/voice"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <com.hyphenate.easeui.widget.EaseSwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch_sound"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="#E6E6E6" />

                <RelativeLayout
                    android:id="@+id/rl_switch_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/em_btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/shake"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <com.hyphenate.easeui.widget.EaseSwitchButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/switch_vibrate"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />
                <RelativeLayout
                    android:id="@+id/rl_push_settings"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/em_btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/push_settings"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />

                <LinearLayout
                    android:id="@+id/ll_user_profile"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/em_btn_bottom_selector"
                    android:padding="10dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="10dip"
                        android:text="版本更新"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/btn_gray_normal" />
            </LinearLayout>

            <TextView
                android:id="@+id/textview4"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="#E6E6E6" />

        </LinearLayout>



    </ScrollView>

</LinearLayout>
